--- a/app/src/main/res/drawable/button_clip_style_selected.xml
+++ b/app/src/main/res/drawable/button_clip_style_selected.xml
@@ -10,5 +10,5 @@
         android:top="0dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/layoutBorder" />
+        android:color="@color/primary" />
 </shape>
