--- a/app/src/main/res/drawable/selector_btn_clip.xml
+++ b/app/src/main/res/drawable/selector_btn_clip.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- selector가 눌렸을때 @drawable/button01_press 를 보여준다.-->
-    <item android:state_pressed="true" android:drawable="@drawable/buttoncomplete"/>
+    <item android:state_selected="true" android:drawable="@drawable/button_clip_style_selected"/>
 
     <!-- selector가 눌리지 않았을때 @drawable/button01_normal 를 보여준다.-->
-    <item android:state_pressed="false" android:drawable="@drawable/button_clip_style"/>
+    <item android:state_selected="false" android:drawable="@drawable/button_clip_style"/>
 
 </selector>
