--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
 
     <LinearLayout
@@ -24,19 +24,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="내 정보"
-                android:textStyle="bold"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </android.support.v7.widget.Toolbar>
 
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="80dp"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="20dp"
+            android:layout_marginRight="5dp"
             android:background="@drawable/layoutborder">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/image_menu1_profile_image"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
@@ -53,8 +54,8 @@
                 android:layout_toRightOf="@id/image_menu1_profile_image"
                 android:text="유저 이름"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="18dp" />
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/text_view_menu1_profile_email"
@@ -70,10 +71,12 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="68dp"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/layoutborder"
             android:gravity="center"
             android:orientation="vertical"
-            android:background="@drawable/layoutborder"
             android:text="독서마라톤 관련">
 
             <TextView
@@ -111,92 +114,105 @@
                 android:textSize="22dp"
                 android:visibility="visible" />
         </RelativeLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/layoutborder">
+            android:layout_marginRight="5dp"
+            android:background="@drawable/layoutborder"
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:text="활동"
+                android:textColor="@color/black"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
+                android:textStyle="bold" />
+
             <Button
                 android:id="@+id/btn_account_myBoard"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:background="@color/white"
                 android:gravity="left|center_vertical"
-                android:layout_marginLeft="10dp"
                 android:text="내가 쓴 글"
-                android:textSize="15sp"
                 android:textColor="@color/black"
-                style="?android:attr/borderlessButtonStyle"/>
+                android:textSize="15sp" />
+
             <Button
                 android:id="@+id/btn_account_myChat"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:background="@color/white"
                 android:gravity="left|center_vertical"
-                android:layout_marginLeft="10dp"
                 android:text="참여한 채팅방"
-                android:textSize="15sp"
                 android:textColor="@color/black"
-                style="?android:attr/borderlessButtonStyle"/>
+                android:textSize="15sp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/layoutborder">
+            android:layout_marginRight="5dp"
+            android:background="@drawable/layoutborder"
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:text="계정"
+                android:textColor="@color/black"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
+                android:textStyle="bold" />
+
             <Button
                 android:id="@+id/btn_account_photo"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:background="@color/white"
                 android:gravity="left|center_vertical"
-                android:layout_marginLeft="10dp"
                 android:text="프로필 이미지 변경"
-                android:textSize="15sp"
                 android:textColor="@color/black"
-                style="?android:attr/borderlessButtonStyle"/>
+                android:textSize="15sp" />
+
             <Button
                 android:id="@+id/btn_account_logout"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:background="@color/white"
                 android:gravity="left|center_vertical"
-                android:layout_marginLeft="10dp"
                 android:text="로그아웃"
-                android:textSize="15sp"
                 android:textColor="@color/black"
-                style="?android:attr/borderlessButtonStyle"/>
+                android:textSize="15sp" />
+
             <Button
                 android:id="@+id/btn_account_revoke"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:background="@color/white"
                 android:gravity="left|center_vertical"
-                android:layout_marginLeft="10dp"
                 android:text="회원탈퇴"
-                android:textSize="15sp"
                 android:textColor="@color/black"
-                style="?android:attr/borderlessButtonStyle"/>
+                android:textSize="15sp" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
