--- a/app/src/main/res/layout/activity_board_result.xml
+++ b/app/src/main/res/layout/activity_board_result.xml
@@ -14,13 +14,14 @@
         android:elevation="1dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
         <TextView
             android:id="@+id/text_view_result_pageTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="게시판"
-            android:textStyle="bold"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </android.support.v7.widget.Toolbar>
 
     <ScrollView
@@ -28,32 +29,37 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:scrollbars="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:orientation="horizontal"
-                android:background="@color/lightGray">
+                android:background="@color/lightGray"
+                android:orientation="horizontal">
+
                 <ImageView
                     android:id="@+id/iv_result"
                     android:layout_width="65dp"
                     android:layout_height="80dp"
                     android:layout_margin="10dp" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/text_view_result_book_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="책 제목"
-                        android:maxLines="1"
                         android:ellipsize="end"
+                        android:maxLines="1"
+                        android:text="책 제목"
                         android:textColor="@color/blackSoft"
                         android:textSize="22sp" />
 
@@ -61,62 +67,65 @@
                         android:id="@+id/text_view_result_author"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:maxLines="1"
                         android:text="책 저자"
                         android:textColor="@color/blackSoft"
-                        android:maxLines="1"
-                        android:ellipsize="end"
                         android:textSize="15sp" />
                 </LinearLayout>
             </LinearLayout>
+
             <TextView
                 android:id="@+id/text_view_result_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:text="글 제목"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="22sp" />
-            <LinearLayout
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
+
                 <TextView
                     android:id="@+id/text_view_result_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_toLeftOf="@id/text_view_result_date"
                     android:text="닉네임"
                     android:textColor="@color/blackSoft"
                     android:textSize="16dp" />
+
                 <TextView
                     android:id="@+id/text_view_result_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_toLeftOf="@id/text_view_result_recommend"
                     android:text="0000-00-00 00:00"
                     android:textColor="@color/blackSoft"
                     android:textSize="12dp" />
+
                 <TextView
                     android:id="@+id/text_view_result_recommend"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
                     android:layout_marginRight="20dp"
                     android:text="추천 "
-                    android:gravity="right"
-                    android:layout_weight="1"
                     android:textColor="@color/blackSoft"
                     android:textSize="12dp" />
 
 
-            </LinearLayout>
-            <View
-                android:id="@+id/view_result_border"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@color/primaryDeep" />
+            </RelativeLayout>
+
+
             <ImageView
                 android:id="@+id/iv_result_photos"
                 android:layout_width="wrap_content"
@@ -133,19 +142,23 @@
                 android:layout_marginRight="20dp"
                 android:text="글 내용"
                 android:textColor="@color/blackSoft" />
+
             <ImageButton
                 android:id="@+id/btn_board_recommend"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginTop="50dp"
                 android:background="@drawable/ic_thumb_up" />
+
             <View
                 android:id="@+id/view_result_border2"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
-                android:background="@color/primaryDeep" />
+                android:background="@color/layoutBorder" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_Reply"
                 android:layout_width="match_parent"
@@ -155,29 +168,33 @@
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
         </LinearLayout>
     </ScrollView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:background="@color/lightGray">
+        android:background="@color/lightGray"
+        android:orientation="horizontal">
+
         <TextView
             android:id="@+id/text_view_reply_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
             android:text="작성자"
             android:textColor="@color/blackSoft"
-            android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
             android:textSize="15sp" />
+
         <EditText
             android:id="@+id/et_reply_contents"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:hint="댓글을 작성해주세요"
-            android:layout_gravity="center_vertical"
             android:scrollbars="vertical"
             android:textSize="15sp" />
+
         <ImageButton
             android:id="@+id/btn_reply"
             android:layout_width="wrap_content"
