--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -7,46 +7,48 @@
     android:background="@color/lightGray"
     tools:context=".ChatActivity">
 
-    <RelativeLayout
-        android:id="@+id/layout_chat_menu"
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_chat"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/textview">
+        android:layout_height="56dp"
+        android:background="@color/white"
+        android:elevation="1dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
         <TextView
             android:id="@+id/text_view_chat_room_title"
-            android:layout_width="wrap_content"
-            android:layout_height="56dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="10dp"
-            android:text=""
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="방 제목"
             android:textColor="@color/blackSoft"
-            android:textSize="16dp" />
-
-        <ImageButton
-            android:id="@+id/btn_chat_peoples"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_toLeftOf="@id/btn_chat_exit"
-            android:layout_centerVertical="true"
-            android:background="@drawable/ic_person"
-            android:layout_marginRight="5dp"/>
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/btn_chat_exit"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:layout_gravity="right"
             android:background="@drawable/icon_door" />
 
-    </RelativeLayout>
+        <ImageButton
+            android:id="@+id/btn_chat_peoples"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:layout_gravity="right"
+            android:background="@drawable/ic_account" />
+
+    </android.support.v7.widget.Toolbar>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/layout_chat_menu"
+        android:layout_below="@id/toolbar_chat"
         android:orientation="vertical">
 
         <LinearLayout
@@ -77,7 +79,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:text="전송" />
+                android:background="@drawable/button_clip_style_selected"
+                android:text="전송"
+                android:textColor="@color/blackSoft" />
 
         </LinearLayout>
 
