--- a/app/src/main/res/layout/fragment_menu1.xml
+++ b/app/src/main/res/layout/fragment_menu1.xml
@@ -5,70 +5,34 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal">
+        android:background="@color/primary">
 
-        <Button
-            android:id="@+id/btn_interpark"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:text="인터파크"
-            android:textColor="@color/blackSoft"
-            android:textSize="18dp" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:background="@color/white">
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:background="@color/primary" />
+            <Spinner
+                android:id="@+id/spinner_site_category"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_centerInParent="true"
+                android:entries="@array/siteCategory"
+                android:gravity="center" />
 
-        <Button
-            android:id="@+id/btn_aladin"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:text="알라딘"
-            android:textColor="@color/blackSoft"
-            android:textSize="18dp" />
+        </RelativeLayout>
+    </RelativeLayout>
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="50dp"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:background="@color/primary" />
-
-        <Button
-            android:id="@+id/btn_lib"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:text="공공도서관"
-            android:textColor="@color/blackSoft"
-            android:textSize="18dp"/>
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="@color/primary" />
 
     <LinearLayout
         android:id="@+id/layout_recommend_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
         <Button
@@ -79,7 +43,7 @@
             android:layout_weight="1"
             android:background="@drawable/selector_btn_clip"
             android:text="베스트 셀러"
-            android:textSize="18dp" />
+            android:textSize="15dp" />
 
         <Button
             android:id="@+id/btn_recommend_new"
@@ -91,13 +55,14 @@
             android:background="@drawable/selector_btn_clip"
             android:text="새로나온 책"
             android:textColor="@color/blackSoft"
-            android:textSize="18dp" />
+            android:textSize="15dp" />
 
         <Spinner
             android:id="@+id/spinner_recommend_category"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="2dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:entries="@array/도서관카테고리"
@@ -105,33 +70,26 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:gravity="center_vertical"
-            android:text="검색"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="15dp" />
+        android:layout_height="wrap_content">
 
         <Spinner
             android:id="@+id/spinner_book_search"
             android:layout_width="120dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
             android:entries="@array/bookSearch">
 
         </Spinner>
 
         <EditText
             android:id="@+id/et_book_search"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:layout_toLeftOf="@id/btn_book_search_data"
+            android:layout_toRightOf="@id/spinner_book_search"
             android:ems="6"
             android:imeOptions="actionSearch"
             android:lines="1"
@@ -141,12 +99,13 @@
             android:id="@+id/btn_book_search_data"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_gravity="center"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:background="@drawable/ic_search"
             android:text="검색" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_recommend"
