--- a/app/src/main/res/layout/item_chat_bubble.xml
+++ b/app/src/main/res/layout/item_chat_bubble.xml
@@ -8,8 +8,7 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/lightGray">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/layout_chat_profile"
@@ -54,5 +53,12 @@
             android:layout_alignParentBottom="true"
             android:text="시간"
             android:textSize="10dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/primary"/>
+
     </RelativeLayout>
 </android.support.v7.widget.CardView>
