--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
 
     <LinearLayout
@@ -24,8 +24,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="내 정보"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textSize="20sp"/>
         </android.support.v7.widget.Toolbar>
 
 
@@ -68,53 +68,6 @@
                 android:textSize="12dp" />
         </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="68dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/layoutborder"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:text="독서마라톤 관련">
-
-            <TextView
-                android:id="@+id/text_view_maraton_Progress_Text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:gravity="center"
-                android:text="독서마라톤 진행률"
-                android:textColor="@color/blackSoft"
-                android:textSize="18dp"
-                android:visibility="invisible" />
-
-            <ProgressBar
-                android:id="@+id/progress_maraton"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:layout_centerInParent="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:max="100"
-                android:progress="50"
-                android:progressTint="@color/primary"
-                android:visibility="invisible" />
-
-            <TextView
-                android:id="@+id/text_view_maraton_ProgressNot"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="독서 마라톤을 시작해보세요"
-                android:textColor="@color/blackSoft"
-                android:textSize="22dp"
-                android:visibility="visible" />
-        </RelativeLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -155,8 +108,18 @@
                 android:background="@color/white"
                 android:gravity="left|center_vertical"
                 android:text="참여한 채팅방"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:textColor="@color/black" />
+            <Button
+                android:id="@+id/btn_account_myMaraton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:gravity="left|center_vertical"
+                android:layout_marginLeft="10dp"
+                android:text="참여한 마라톤"
+                android:textSize="15sp"
+                android:textColor="@color/black" />
         </LinearLayout>
 
         <LinearLayout
