--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -54,7 +54,8 @@
                 android:layout_marginBottom="10dp"
                 android:text="책제목"
                 android:textSize="20sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -115,7 +116,8 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
                 android:textStyle="bold"
-                android:text="도서설명"/>
+                android:text="도서설명"
+                android:textColor="@color/black"/>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -141,6 +143,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginBottom="10dp"
                 android:text="게시글 조회"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 />
             <android.support.v7.widget.RecyclerView
