--- a/app/src/main/res/layout/activity_book_maraton_add.xml
+++ b/app/src/main/res/layout/activity_book_maraton_add.xml
@@ -52,38 +52,17 @@
     </ScrollView>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        >
-        <EditText
-            android:id="@+id/et_maraton_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.4"
-            android:hint="시작 날짜 (ex20190101)"
-            android:inputType="date"
-            android:textAlignment="center"
-            android:clickable="true"
-            android:focusable="false"
-            android:textSize="15dp" />
-
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:text="~" />
-
-        <EditText
-            android:id="@+id/et_maraton_end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.4"
-            android:hint="종료 날짜 (ex20200101)"
-            android:inputType="date"
-            android:textAlignment="center"
-            android:textSize="15dp" />
-
-
+            android:gravity="center_horizontal"
+            android:text="원하시는 책을 눌러주세요!"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="@color/black"/>
     </LinearLayout>
 
 </LinearLayout>
