--- a/app/src/main/res/layout/fragment_menu4.xml
+++ b/app/src/main/res/layout/fragment_menu4.xml
@@ -25,7 +25,10 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:text="현재 진행중인 독서마라톤"
-                    android:textSize="16sp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"
                     android:textStyle="bold"/>
 
                 <android.support.v7.widget.RecyclerView
@@ -34,18 +37,23 @@
                     android:layout_height="match_parent"
                     app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
             </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_gravity="bottom">
-
-        <Button
-            android:id="@+id/btn_maraton_add"
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_maraton_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="독서마라톤 추가"/>
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="15dp"
+            android:backgroundTint="@color/primary"
+            android:src="@drawable/ic_edit"
+            app:borderWidth="0dp" />
     </LinearLayout>
 </LinearLayout>
