--- a/app/src/main/res/layout/item_maraton_book.xml
+++ b/app/src/main/res/layout/item_maraton_book.xml
@@ -30,9 +30,11 @@
                 android:layout_marginTop="5dp"
                 android:layout_toRightOf="@id/iv_maraton_item_thumbnail"
                 android:text="책 타이틀"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:textStyle="bold"
                 android:textColor="@color/black"
-                android:textSize="14dp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/text_view_maraton_item_total_page"
@@ -40,9 +42,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/text_view_maraton_item_title"
                 android:layout_alignLeft="@id/text_view_maraton_item_title"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="20dp"
                 android:text="총 페이지"
-                android:textSize="12dp" />
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/text_view_maraton_item_date"
@@ -53,7 +55,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:text="독서시작일"
-                android:textSize="12dp" />
+                android:textSize="12sp" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
