--- a/app/src/main/res/layout/item_recommend_book.xml
+++ b/app/src/main/res/layout/item_recommend_book.xml
@@ -31,9 +31,11 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
                 android:layout_toRightOf="@id/iv_recommend_item_thumbnail"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:text="책 타이틀"
-                android:textColor="@color/blackSoft"
-                android:textSize="14dp" />
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
 
             <TextView
