--- a/app/src/main/res/layout/fragment_menu4.xml
+++ b/app/src/main/res/layout/fragment_menu4.xml
@@ -18,19 +18,25 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:text="현재 진행중인 독서마라톤"
+                    android:text="당신의 독서마라톤"
                     android:layout_marginBottom="10dp"
-                    android:layout_marginTop="10dp"
                     android:textSize="18sp"
                     android:textColor="@color/black"
                     android:textStyle="bold"/>
-
+                <View
+                    android:id="@+id/view_maraton_border"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@color/layoutBorder" />
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_maraton_doing"
                     android:layout_width="match_parent"
